# danb

./: .gitignore  DOCS.md  Makefile  README.md  build.sh  main.cpp  pydoc-markdown.yml  pyproject.toml  release.sh
.github/workflows/: build-and-release.yml
src/: __init__.py  cli.py  sequence.py
src/danb/: config.py  downloader.py  plm.py  structure.py
